# vamprust

./: .gitignore  .gitmodules  Cargo.toml  PYTHON_README.md  README.md  benchmark.sh  build.rs  build_python.sh  pyproject.toml
benchmarks/: shootout_9d484b1_main.md
examples/: basic_usage.rs  simple_host.rs
python/examples/: audio_file_processing.py  basic_usage.py  chordino.py  plugin_discovery.py  plugin_inspector.py  rms.py
python/tests/: test_basic.py
python/vamprust/: audio.py  cli.py  features.py
src/: lib.rs  python.rs
