[package]
name = "vamprust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"

[dependencies]
libc = "0.2"
hound = "3.5"
sndfile = "0.1.1"
realfft = "3.4"
rustfft = "6.4.0"
env_logger = "0.11.8"
log = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "vamp-simple-host-rs"
path = "examples/simple_host.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

