[package]
name = "vamprust"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"

[dependencies]
libc = "0.2"
sndfile = "0.1.1"
realfft = { version = "3.4", features = ["avx"] }
rustfft = "6.4.0"
env_logger = { version = "0.11.8", default-features = false, features = ["color"] }
log = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "vamp-simple-host-rs"
path = "examples/simple_host.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1

